--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ body {
 }
 #feature {
     display: flex;
+    flex-flow: row;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -182,6 +183,7 @@ body {
 
 #feature .fe-box {
     width: 180px;
+    height: 341.2px;
     text-align: center;
     padding: 25px 15px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
@@ -209,7 +211,7 @@ body {
 }
 #feature .fe-box .pos{
     font-family:midnightregular;
-    font-size: 20px;
+    font-size: 50px;
     background: -webkit-linear-gradient(45deg, rgba(241,175,23,1) 0%, rgba(255,227,19,1) 50%, rgba(241,175,23,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -1105,7 +1107,7 @@ footer .copyright {
     }
 
     #header .logo {
-        width: 23vh;
+        width: 13vh;
     }
 
     h2 {
@@ -1244,4 +1246,13 @@ footer .copyright {
 
 
 
+}
+@media(width:320px){
+    #feature{
+        justify-content: center;
+        align-items: center;        
+    }
+    #feature .fe-box{
+        width: 75%;
+    }
 }
