--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 h2 {
-    font-size: 46px;
+    font-size: 80px;
     line-height: 54px;
     font-family: midnightregular;
     font-weight:100;
@@ -192,7 +192,7 @@ body {
 #hero h1{
     font-family: BATGREXO;
     font-weight:100;
-    font-size:55px;
+    font-size:150px;
     margin-left:-30px;
 }
 
@@ -271,7 +271,7 @@ font-family: BATGREXO;
     font-weight: 300;
 }
 .player img {
-    height: 300px;
+    height: 500px;
     margin: auto;
 }
 #feature {
@@ -598,7 +598,7 @@ font-family: BATGREXO;
 footer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     border-top: 2px solid #787878;
 }
 
@@ -607,7 +607,7 @@ footer .col {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 20px;
+    margin: 0px 50px 50px 20px;
 }
 
 footer .col .logo {
@@ -1130,6 +1130,9 @@ footer .copyright {
         height: 70vh;
         padding: 0 60px;
                 
+    }
+    #hero h1 {
+        font-size: 80px;
     }
     .player {
         flex-direction: column;
